# escritos

./: .gitignore  .pre-commit-config.yaml  Makefile.am  bootstrap.sh  configure.ac
anaconda/: 0001-installation_source-Don-t-try-to-remove-a-repo-twice.patch  10-network.conf  11-no-selinux.conf  12-storage-scheme.conf
extras/: README.md  boot-guest
libvirt/: install-script.sh
src/: macos.sh  qemu-script.sh  rpi-test  rpi.sh  win
src/aws/: aws_get-public-ip.sh  aws_stop-vm.sh  get-public-ip.sh  start-vm.sh  stop-vm.sh
src/centos-stream/: create-custom-iso.sh  create-os-image.sh  del-old-isos.sh  get-iso.sh
src/containerfiles/debian-pkg-dev/: Containerfile
src/cs9/: get-iso.sh
src/debian/: README  compilar-kernel.txt  desarrollo-paquetes.txt  disable-testing.sh  enable-bookworm-backports.sh  enable-stable-backports.bash  enable-testing.sh  gbp.md  install-experimental-kernel.sh  install-testing-kernel.sh  install-unstable-kernel.sh  links.md  nuevo-paquete.md  patch-format.txt  setup-kernel-dev-env.sh
src/google/: .gitignore  usuarios_encabezado.csv  usuarios_google.py
src/incus/: add-user-miguel.sh  incus-share-this-dir.bash  incus.key.pub  my-setup.bash  path-on-host.md  port-forwarding.md
src/k8s/: comandos.md
src/kernel/: .gitignore  port-to-current.sh  search-for-keys.bash  search-for-missing-config.bash  x86_kconfig
src/linode/: create.sh
src/qemu/: README.md  qemu-cxl.sh  qemu-script.sh
src/ssh/: authorized_keys  permitRootLogin-yes.sh  sshd_config.d_90-miguel.conf
src/usuarios/: add-user-alumno.sh  setup-user.bash
(+4 files in other folders)
