AC_PREREQ([2.60])
AC_INIT(win, 0, miguel.bernal.marin@gmail.com)

AM_INIT_AUTOMAKE([foreign -Wall -Werror -Wno-portability parallel-tests])

AC_CONFIG_FILES([Makefile])

# Checks for programs.

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_OUTPUT
